--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -11,7 +11,7 @@
                     {{/each}} 
                         <li>
                             <div class="button">
-                                <button class="post-btn"><a href="/create-post"> + New Post</a></button><br><br>
+                                <a class="post-btn" href="/create-post"> + New Post</a><br><br>
                             </div>
                         </li>
                 </ul>
