--- a/views/partials/single-post-part.handlebars
+++ b/views/partials/single-post-part.handlebars
@@ -8,8 +8,8 @@
             </div>
         </div>
         <div class="card-body">
-            {{this.content_txt}} 
-            {{comments.length}} {{format_plural "comment" comments.length}}
+            {{this.content_txt}}<br><br>
+            {{commentCount}} {{format_plural "comment" commentCount}}
         </div>
       </div>
     </div>
